# doxygen-tutorial

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
.github/workflows/: ci.yml
include/io/: writer.h
include/math/: math.h
include/service/: sum_service.h
lessons/: 01-cpp-basics.md  02-cmake-basics.md  03-libraries.md  04-gtest.md  05-gmock.md  06-doxygen.md  07-ci-integration.md
src/: CMakeLists.txt  main.cpp
src/io/: console_writer.cpp
src/math/: math.cpp
src/service/: sum_service.cpp
tests/: CMakeLists.txt  test_gmock.cpp  test_math.cpp
